# app.js
@@ -1,35 +1,29 @@
+// app.js
 require('dotenv').config();
 const express = require('express');
 const cors = require('cors');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
-const { loadConfig } = require('./src/config'); // 👈 add this
+const { loadConfig } = require('./src/config');
+const { authMiddleware, requireGroup } = require('./src/middleware/authmiddleware');
 
 (async () => {
-  // Load config from Parameter Store, fallback to .env
   const config = await loadConfig();
   Object.assign(process.env, config);
 
   const app = express();
-
-  // Load OpenAPI spec
   const openapiDocument = YAML.load('./openapi.yaml');
 
-  // Middleware
   app.use(cors());
   app.use(express.json());
 
-  // Static file serving
   app.use('/uploads', express.static('uploads'));
   app.use('/transcoded', express.static('src/transcoded'));
 
-  // API docs
   app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(openapiDocument));
 
-  // Health check
   app.get('/health', (req, res) => res.json({ status: 'ok' }));
 
-  // Optional debug route (safe – masks secret)
   app.get('/config', (req, res) => {
     res.json({
       AWS_REGION: process.env.AWS_REGION,
@@ -49,7 +43,15 @@ const { loadConfig } = require('./src/config'); // 👈 add this
   app.use('/video', videoRoutes);
   app.use('/jobs', jobsRoutes);
 
-  // Start server
+  //  admin-only demo route
+  app.get('/admin/dashboard', authMiddleware, requireGroup('admin'), (req, res) => {
+    res.json({
+      message: `Welcome, admin ${req.user['cognito:username']}`,
+      groups: req.user['cognito:groups'] || []
+    });
+  });
+
+
   const PORT = process.env.PORT || 3000;
   app.listen(PORT, '0.0.0.0', () => {
     console.log(`Server running on port ${PORT}`);
